# xxd_embed_c11

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_3.0.0.md
cmake/: EmbedFile.cmake  GenerateEmbed.cmake  GenerateHex.cmake  GenerateWasmEmbed.cmake
example/: CMakeLists.txt  example.c
include/: xxd.h  xxd.in  xxd_gas.c.in  xxd_wasm.c.in
src/: xxd.c  xxd_embed.c
